Se agrega Interviniente

--- a/src/main/webapp/app/init.xhtml
+++ b/src/main/webapp/app/init.xhtml
@@ -42,7 +42,8 @@
                                  ajax="false"/>
                 <p:commandButton styleClass="admin-dashboard-button" value="Tipo feeder" action="tipoFeeder"
                                  ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Tipo BTS" action="tipoBTS" ajax="false"/>
+                <p:commandButton styleClass="admin-dashboard-button" value="Interviniente" action="interviniente"
+                                 ajax="false"/>
                 <p:commandButton styleClass="admin-dashboard-button" value="Estructura" action="estructuras"
                                  ajax="false"/>
                 <br/>
